# epita-gpgu-project

./: .gitignore  BENCHMARK.md  CMakeLists.txt  README.md  boxes_stdout_example.json  convert_mp4_to_jpg.py  convert_mp4_to_png.py  generate.ipynb  generate_video.py  pyproject.toml  requirements.txt
benckmarks/: BENCHMARK.md  report_baseline.nsys-rep  report_opt.nsys-rep  report_opt_on_propagate.nsys-rep
src/: bench.cpp  detect.cpp  render.cpp  render.cu  render.hpp  utils.cpp  utils.hpp
